tests/test_exception/bad/output/self_exception.catala_en.A.Interpret
[ERROR] Cannot define rule as an exception to itself

 --> tests/test_exception/bad/self_exception.catala_en
  | 
9 |   exception base_y
  |             ^^^^^^
  + Test
